# TestTaskReview

./: .dockerignore  .gitignore  README.md  manage.py  pyproject.toml  pytest.ini  requirements.txt
hero_api/: asgi.py  settings.py  urls.py  wsgi.py
ops/: Dockerfile  docker-compose.yaml
rest/: admin.py  apps.py  exceptions.py  factories.py  filters.py  models.py  serializers.py  service_models.py  services.py  tests.py  urls.py  utils.py  views.py
rest/migrations/: 0001_initial.py  0002_hero_parameters_search_index.py
rest/tests/: conftest.py  factories.py  services_tests.py  views_tests.py
