[project]
name = "hero-api"
version = "0.1.0"
description = "Тестовое задание"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asgiref==3.9.1",
    "certifi==2025.8.3",
    "charset-normalizer==3.4.2",
    "django==5.2.4",
    "django-filter==25.1",
    "djangorestframework==3.16.0",
    "idna==3.10",
    "python-dotenv==1.1.1",
    "requests==2.32.4",
    "sqlparse==0.5.3",
    "tzdata==2025.2",
    "urllib3==2.5.0",
]
