[project]
name = "hero-api"
version = "0.1.0"
description = "Тестовое задание"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asgiref==3.9.1",
    "certifi==2025.8.3",
    "charset-normalizer==3.4.2",
    "django==5.2.4",
    "django-filter==25.1",
    "djangorestframework==3.16.0",
    "environs>=14.3.0",
    "factory-boy>=3.3.3",
    "gunicorn>=23.0.0",
    "idna==3.10",
    "pytest>=8.4.1",
    "pytest-django>=4.11.1",
    "pytest-mock>=3.14.1",
    "python-dotenv==1.1.1",
    "requests==2.32.4",
    "requests-mock>=1.12.1",
    "ruff>=0.12.7",
    "sqlparse==0.5.3",
    "tzdata==2025.2",
    "urllib3==2.5.0",
]
